--- a/browser/templates/login.html
+++ b/browser/templates/login.html
@@ -1,9 +1,9 @@
 <div class='well'>
-	<form name ='login'>
+	<form name='form'>
 		<div class='form-group'>
 			<input required ng-model='credentials.name' class='form-control' name='name' />
 			<input required ng-model='credentials.password' class='form-control' name="password" />
-			<button class='btn btn-primary' ng-click="login()" ng-disabled='login.$invalid'> Login </button>
+			<button class='btn btn-primary' ng-click="login()" ng-disabled='form.$invalid'> Login </button>
 		</div>
 	</form>
 </div>
