--- a/browser/templates/home.html
+++ b/browser/templates/home.html
@@ -1,3 +1,5 @@
 <div class='well'>
-Home.html
+	<ul class='list-group'>
+		<li class='list-group-item' ng-repeat='user in users'> {{user.name}} {{user.password}} </li>
+	</ul>
 </div>
