--- a/browser/templates/home.html
+++ b/browser/templates/home.html
@@ -1,5 +1,5 @@
 <div class='well'>
 	<ul class='list-group'>
-		<li class='list-group-item' ng-repeat='user in users'> {{user.name}} {{user.password}} </li>
+		<li class='list-group-item' ng-repeat='user in users'> Username: {{user.name}}  Password: {{user.password}} </li>
 	</ul>
 </div>
