--- a/browser/templates/settings.html
+++ b/browser/templates/settings.html
@@ -1,3 +1,5 @@
 <div class='well'>
-	Settings.html
+	<ul class='list-group'>
+		<li class='list-group-item' ng-repeat='group in groups'> {{group.name}}</li> 
+	</ul>
 </div>
