--- a/browser/templates/settings.html
+++ b/browser/templates/settings.html
@@ -1,5 +1,5 @@
 <div class='well'>
 	<ul class='list-group'>
-		<li class='list-group-item' ng-repeat='group in groups'> {{group.name}}</li> 
+		<li ng-class="hasGroup(group.id) ? 'list-group-item-success list-group-item' : 'list-group-item' " ng-click='addGroup(group.id)'  ng-repeat='group in groups'> {{group.name}}</li> 
 	</ul>
 </div>
